cmake_minimum_required(VERSION 2.8)
project( detect_faces )
find_package( OpenCV 3.4.9 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( original original.cpp common.h common.cpp )
add_executable( original_unmod original_unmod.cpp )
add_executable( phase1_exe phase1/phase1.cpp common.h common.cpp )
add_executable( phase2_exe phase2/phase2.cpp common.h common.cpp )
add_executable( phase3_exe phase3/phase3.cpp common.h common.cpp )
target_link_libraries( original ${OpenCV_LIBS} )
target_link_libraries( original_unmod ${OpenCV_LIBS} )
target_link_libraries( phase1_exe ${OpenCV_LIBS} )
target_link_libraries( phase2_exe ${OpenCV_LIBS} )
target_link_libraries( phase3_exe ${OpenCV_LIBS} )
